# SCOOBY

./: .gitmodules  README.md  SCOOBY_params.yaml  test.py
CV/: ball_in_out.py  ball_in_out2.py  detect_ball.py  websocket_server.py
CV/colour calibration/: colour calibration.py  hsv_value.npy
CV/design documents/: CV logic.pptx
Week01/: Week 1 - Image handling and basic operations.ipynb
scooper/: main.py
tennis_nn_test/: detect_ball.py  vidTest.py
tennisbot_ws/: frames_2024-08-29_15.03.48.gv
tennisbot_ws/install/: local_setup.sh  setup.sh
tennisbot_ws/install/ball_tracker/lib/ball_tracker/: detect_ball_nn  detect_ball_nn_offload  follow_ball_action_server
tennisbot_ws/install/ball_tracker/share/ball_tracker/: package.sh  package.xml
tennisbot_ws/install/ball_tracker_msgs/share/ball_tracker_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
tennisbot_ws/install/diffdrive_arduino/share/diffdrive_arduino/: diffdrive_arduino.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
tennisbot_ws/install/ros2_nav_to_pose/lib/ros2_nav_to_pose/: nav_to_pose_action_client  nav_to_pose_action_server
tennisbot_ws/install/yasmin/pytests/: test_blackboard.py  test_cb_state.py  test_state.py  test_state_machine.py
tennisbot_ws/install/yasmin_ros/pytests/: run_pytests.sh  test_yasmin_ros.py
tennisbot_ws/log/: latest_build
tennisbot_ws/src/ball_tracker/: setup.py
tennisbot_ws/src/ball_tracker/ball_tracker/: deposit_to_box_action_server.py  detect_ball.py  detect_ball_nn.py  detect_ball_nn_offload.py  detect_box.py  follow_ball.py  follow_ball_OLD.py  follow_ball_action_server.py  helper.py  line_identifier.py  ultrasound.py
tennisbot_ws/src/ball_tracker/config/: ball_tracker_params_example.yaml
tennisbot_ws/src/ball_tracker/launch/: ball_tracker.launch.py  ball_tracker_nn.launch.py  ball_tracker_offload.launch.py  follow_ball_action.launch.py
tennisbot_ws/src/ball_tracker_msgs/: CMakeLists.txt  package.xml
tennisbot_ws/src/ball_tracker_msgs/action/: DepositToBox.action  FollowBallAction.action
tennisbot_ws/src/image_rotator/: CMakeLists.txt  package.xml
tennisbot_ws/src/image_rotator/src/: image_rotator_node.cpp
tennisbot_ws/src/lift_arm/: package.xml  setup.cfg  setup.py
tennisbot_ws/src/lift_arm/launch/: init_servos.launch.py
tennisbot_ws/src/lift_arm/lift_arm/: servo_controller.py  servo_controller_remote.py
tennisbot_ws/src/line_detector/: CMakeLists.txt  package.xml
tennisbot_ws/src/line_detector/launch/: start_lines
tennisbot_ws/src/line_detector/src/: boundary_guard.cpp  detect_lines.cpp
tennisbot_ws/src/ros2_nav_to_pose/: package.xml  setup.cfg  setup.py
tennisbot_ws/src/ros2_nav_to_pose/launch/: start_nav2pose_action.launch.py
tennisbot_ws/src/ros2_nav_to_pose/ros2_nav_to_pose/: helpers.py  helpersv2.py  nav_to_pose_action_server.py
tennisbot_ws/src/ros2_nav_to_pose_msgs/: CMakeLists.txt  package.xml
tennisbot_ws/src/tennisbotmaster/: CMakeLists.txt
tennisbot_ws/src/tennisbotmaster/config/: my_controllers.yaml  twist_mux.yaml
tennisbot_ws/src/tennisbotmaster/description/: camera.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
tennisbot_ws/src/tennisbotmaster/launch/: robot_state_pub.launch.py  start_camera.launch.py  start_robot.launch.py  start_robot_ctlr.launch.py
tennisbot_ws/src/yasmin_fsms/: CMakeLists.txt  package.xml
tennisbot_ws/src/yasmin_fsms/yasmin_fsms/: __init__.py  robot_collect_and_deposit.py  robot_find_and_return.py
(+438 files in other folders)
